<resources>
    <string name="app_name">MusicApp</string>
    <string name="login">Login</string>
    <string name="reg">Register</string>
    <string name="name">Name</string>
    <string name="mob">Mobile Number</string>
    <string name="email">Email ID</string>
    <string name="pass">Password</string>
    <string name="no_reg">Not Registered?</string>
    <string name="openNav">Navigation Drawer opened</string>
    <string name="closeNav">Navigation Drawer closed</string>
    <string name="profile">Profile</string>
    <string name="info">Info</string>
    <string-array name="playlist">
        <item></item>
        <item>Song1</item>
        <item>Song2</item>
        <item>Song3</item>
        <item>Song4</item>
        <item>Song5</item>
        <item>Song6</item>
        <item>Song7</item>
        <item>Song8</item>
        <item>Song9</item>
        <item>Song10</item>
        <item>Song1</item>
        <item>Song2</item>
        <item>Song3</item>
        <item>Song4</item>
        <item>Song5</item>
        <item>Song6</item>
        <item>Song7</item>
        <item>Song8</item>
        <item>Song9</item>
        <item>Song10</item>
    </string-array>
</resources>